Fixed position of scrollbar when resizing window and position of info panel on vertical screens

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -146,7 +146,7 @@ nav {
 
 .info {
   position: fixed;
-  margin-top: 100%; 
+  top: 100%; 
   padding: 0;
   width: 100%; 
   height: 100%; 
